--- a/app/src/main/res/layout/fragment_settings_main.xml
+++ b/app/src/main/res/layout/fragment_settings_main.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_settings_main"
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:menu="@menu/settings_main" />
-</LinearLayout>
+        android:orientation="vertical">
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_settings_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:menu="@menu/settings_main" />
+    </LinearLayout>
+</layout>
