--- a/app/src/main/res/layout/layout_geetest_dialog.xml
+++ b/app/src/main/res/layout/layout_geetest_dialog.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
 
-    <WebView
-        android:layout_width="400dp"
-        android:layout_height="370dp"
-        android:id="@+id/wv_geetest"/>
-    <TextView
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:text="抱歉，目前还没有办法获取验证返回值（明显是因为我太菜了）， 但这不代表你无法登录，等待一天或更长时间就不用过验证码了。如果你有办法，请在 Github 上提一个 PR。"/>
-</LinearLayout>
+    </data>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <WebView
+            android:id="@+id/wv_geetest"
+            android:layout_width="400dp"
+            android:layout_height="370dp" />
+
+        <TextView
+            android:layout_width="400dp"
+            android:layout_height="wrap_content"
+            android:text="抱歉，目前还没有办法获取验证返回值（明显是因为我太菜了）， 但这不代表你无法登录，等待一天或更长时间就不用过验证码了。如果你有办法，请在 Github 上提一个 PR。" />
+    </LinearLayout>
+</layout>
