--- a/app/src/main/res/layout/layout_video_card_item.xml
+++ b/app/src/main/res/layout/layout_video_card_item.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cv"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:foreground="?selectableItemBackground"
-    android:longClickable="true"
-    app:cardCornerRadius="1dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
 
-    <include layout="@layout/layout_video"
+    </data>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:foreground="?selectableItemBackground"
+        android:longClickable="true"
+        app:cardCornerRadius="1dp">
+
+        <include
+            layout="@layout/layout_video"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
 
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</layout>
