--- a/app/src/main/res/layout/activity_photo_view.xml
+++ b/app/src/main/res/layout/activity_photo_view.xml
@@ -1,44 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/black"
-    tools:context=".ui.PhotoViewActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
 
-    <com.github.chrisbanes.photoview.PhotoView
-        android:id="@+id/pv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    </data>
 
     <RelativeLayout
-        android:id="@+id/rl"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:paddingBottom="40dp">
+        android:layout_height="match_parent"
+        android:background="@android:color/black"
+        tools:context=".ui.PhotoViewActivity">
 
-        <ImageButton
-            android:id="@+id/ib_pip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="40dp"
-            android:background="@drawable/bg_text"
-            android:foreground="?selectableItemBackground"
-            android:src="@drawable/ic_pip" />
+        <com.github.chrisbanes.photoview.PhotoView
+            android:id="@+id/pv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-        <ImageButton
-            android:id="@+id/ib_dl"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/rl"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="30dp"
-            android:layout_toStartOf="@id/ib_pip"
-            android:background="@drawable/bg_text"
-            android:foreground="?selectableItemBackground"
-            android:src="@drawable/ic_dl" />
+            android:paddingBottom="40dp">
+
+            <ImageButton
+                android:id="@+id/ib_pip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="40dp"
+                android:background="@drawable/bg_text"
+                android:foreground="?selectableItemBackground"
+                android:src="@drawable/ic_pip" />
+
+            <ImageButton
+                android:id="@+id/ib_dl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="30dp"
+                android:layout_toStartOf="@id/ib_pip"
+                android:background="@drawable/bg_text"
+                android:foreground="?selectableItemBackground"
+                android:src="@drawable/ic_dl" />
+        </RelativeLayout>
+
     </RelativeLayout>
-
-</RelativeLayout>
+</layout>
