--- a/app/src/main/res/layout/fragment_settings_download.xml
+++ b/app/src/main/res/layout/fragment_settings_download.xml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
 
-    <RadioGroup
-        android:id="@+id/rg_downloader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    </data>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <RadioButton
-            android:id="@+id/rb_okhttp"
+        <RadioGroup
+            android:id="@+id/rg_downloader"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/okhttp"
-            android:checked="true"/>
+            android:layout_height="wrap_content">
 
-        <RadioButton
-            android:id="@+id/rb_downloadManager"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/download_manager" />
-    </RadioGroup>
-</LinearLayout>
+            <RadioButton
+                android:id="@+id/rb_okhttp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/okhttp" />
+
+            <RadioButton
+                android:id="@+id/rb_downloadManager"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/download_manager" />
+        </RadioGroup>
+    </LinearLayout>
+</layout>
