--- a/app/src/main/res/layout/layout_dynamic_card_item.xml
+++ b/app/src/main/res/layout/layout_dynamic_card_item.xml
@@ -1,53 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:foreground="?selectableItemBackground">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
 
-    <RelativeLayout
+    </data>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:foreground="?selectableItemBackground">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/cli_face"
-            android:layout_width="@dimen/face_size_small"
-            android:layout_height="@dimen/face_size_small" />
-
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_toEndOf="@id/cli_face"
-            android:textColor="@android:color/black"
-            android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/tv_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_name"
-            android:layout_alignStart="@id/tv_name"
-            android:layout_marginTop="5dp"
-            android:layout_toEndOf="@id/cli_face" />
-
-        <TextView
-            android:id="@+id/tv_content"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cli_face"
-            android:layout_marginTop="10dp"
-            android:textColor="@android:color/black"
-            android:textIsSelectable="true" />
+            android:padding="10dp">
 
-        <LinearLayout
-            android:id="@+id/ll"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_content"
-            android:orientation="vertical" />
-    </RelativeLayout>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/cli_face"
+                android:layout_width="@dimen/face_size_small"
+                android:layout_height="@dimen/face_size_small" />
+
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_toEndOf="@id/cli_face"
+                android:textColor="@android:color/black"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_name"
+                android:layout_alignStart="@id/tv_name"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@id/cli_face" />
+
+            <TextView
+                android:id="@+id/tv_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/cli_face"
+                android:layout_marginTop="10dp"
+                android:textColor="@android:color/black"
+                android:textIsSelectable="true" />
+
+            <LinearLayout
+                android:id="@+id/ll"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_content"
+                android:orientation="vertical" />
+        </RelativeLayout>
 
 
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</layout>
