--- a/app/src/main/res/layout/layout_settings_manager_uninited_warning.xml
+++ b/app/src/main/res/layout/layout_settings_manager_uninited_warning.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="5dp"
-    android:layout_gravity="center">
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/ic_warning"/>
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/settings_manager_uninited_warning"
-    android:textSize="20sp"
-    android:layout_marginStart="5dp"/>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
 
-</LinearLayout>
+    </data>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_warning" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text="@string/settings_manager_uninited_warning"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+</layout>
