--- a/app/src/main/res/layout/fragment_settings_download.xml
+++ b/app/src/main/res/layout/fragment_settings_download.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
 
     </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,17 +16,16 @@
             android:layout_height="wrap_content">
 
             <RadioButton
-                android:id="@+id/rb_okhttp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="@string/okhttp" />
-
-            <RadioButton
                 android:id="@+id/rb_downloadManager"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/download_manager" />
+
+            <RadioButton
+                android:id="@+id/rb_glideCache"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/glide_cache" />
         </RadioGroup>
     </LinearLayout>
 </layout>
