--- a/app/src/main/res/layout/activity_jump.xml
+++ b/app/src/main/res/layout/activity_jump.xml
@@ -5,98 +5,103 @@
 
     </data>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/et_component"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Action"
-            android:text="com.duzhaokun123.bilibilihd.ui" />
-
-        <RadioGroup
-            android:id="@+id/rg_choose"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <RadioButton
-                android:id="@+id/rb_int"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="int" />
-
-            <RadioButton
-                android:id="@+id/rb_long"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="long" />
-
-            <RadioButton
-                android:id="@+id/rb_float"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="float" />
-
-            <RadioButton
-                android:id="@+id/rb_double"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="double" />
-
-            <RadioButton
-                android:id="@+id/rb_boolean"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="boolean" />
-
-            <RadioButton
-                android:id="@+id/rb_string"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="String" />
-
-        </RadioGroup>
-
-        <EditText
-            android:id="@+id/et_key"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="key" />
-
-        <EditText
-            android:id="@+id/et_value"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="value" />
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/btn_add"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="0dp"
+            <EditText
+                android:id="@+id/et_component"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="add"
-                android:textColor="@android:color/black" />
+                android:hint="Action"
+                android:text="com.duzhaokun123.bilibilihd.ui" />
 
-            <Button
-                android:id="@+id/btn_start"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="0dp"
+            <RadioGroup
+                android:id="@+id/rg_choose"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RadioButton
+                    android:id="@+id/rb_int"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="int" />
+
+                <RadioButton
+                    android:id="@+id/rb_long"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="long" />
+
+                <RadioButton
+                    android:id="@+id/rb_float"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="float" />
+
+                <RadioButton
+                    android:id="@+id/rb_double"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="double" />
+
+                <RadioButton
+                    android:id="@+id/rb_boolean"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="boolean" />
+
+                <RadioButton
+                    android:id="@+id/rb_string"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="String" />
+
+            </RadioGroup>
+
+            <EditText
+                android:id="@+id/et_key"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="start"
-                android:textColor="@android:color/black" />
+                android:hint="key" />
+
+            <EditText
+                android:id="@+id/et_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="value" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_add"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="add"
+                    android:textColor="@android:color/black" />
+
+                <Button
+                    android:id="@+id/btn_start"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="start"
+                    android:textColor="@android:color/black" />
+            </LinearLayout>
+
+
         </LinearLayout>
-
-
-    </LinearLayout>
+    </ScrollView>
 </layout>
