--- a/app/src/main/res/layout/layout_dynamic_card_item.xml
+++ b/app/src/main/res/layout/layout_dynamic_card_item.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
 
     </data>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:foreground="?selectableItemBackground">
 
         <RelativeLayout
+            android:id="@+id/rl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/cli_face"
+                android:id="@+id/civ_face"
                 android:layout_width="@dimen/face_size_small"
                 android:layout_height="@dimen/face_size_small" />
 
@@ -24,7 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_toEndOf="@id/cli_face"
+                android:layout_toEndOf="@id/civ_face"
                 android:textColor="@android:color/black"
                 android:textSize="15sp" />
 
@@ -35,14 +38,15 @@
                 android:layout_below="@id/tv_name"
                 android:layout_alignStart="@id/tv_name"
                 android:layout_marginTop="5dp"
-                android:layout_toEndOf="@id/cli_face" />
+                android:layout_toEndOf="@id/civ_face" />
 
             <TextView
                 android:id="@+id/tv_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/cli_face"
+                android:layout_below="@id/civ_face"
                 android:layout_marginTop="10dp"
+                android:autoLink="web|email"
                 android:textColor="@android:color/black"
                 android:textIsSelectable="true" />
 
