--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,12 +36,12 @@
     </style>
 
     <style name="AppTheme.TransparencyActionBar" parent="AppTheme">
-        <item name="actionBarTheme">@style/AppTheme.Transparency</item>
+        <item name="actionBarTheme">@style/Transparency</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowLightStatusBar">false</item>
     </style>
 
-    <style name="AppTheme.Transparency" parent="AppTheme">
+    <style name="Transparency">
         <item name="colorPrimary">@android:color/transparent</item>
         <item name="colorPrimaryDark">@android:color/transparent</item>
         <item name="colorAccent">@android:color/transparent</item>
@@ -54,4 +54,17 @@
         <item name="android:windowLightStatusBar">false</item>
     </style>
 
+    <style name="LightTextTransparencyActionBar" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
+        <item name="colorPrimary">@android:color/transparent</item>
+        <item name="colorPrimaryDark">@android:color/transparent</item>
+        <item name="colorAccent">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">@android:color/transparent</item>
+    </style>
+
+    <style name="AppTheme.TransparencyActionBar.DarkActionBar" parent="AppTheme.TransparencyActionBar">
+        <item name="actionBarTheme">@style/LightTextTransparencyActionBar</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowLightStatusBar">false</item>
+    </style>
 </resources>
