--- a/app/src/main/res/layout/notification_video_download.xml
+++ b/app/src/main/res/layout/notification_video_download.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -46,7 +47,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="video.m4s" />
+            android:text="video.m4s"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/tv_video_speed"
@@ -77,7 +79,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="audio.m4s" />
+            android:text="audio.m4s"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/tv_audio_speed"
