--- a/app/src/main/res/menu/play_activity.xml
+++ b/app/src/main/res/menu/play_activity.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <item
         android:id="@+id/open_in_browser"
         android:icon="@drawable/ic_launch"
         android:title="@string/open_in_browser"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/download"
+        android:title="@string/download"
+        app:showAsAction="never" />
 </menu>
